@@ -1,7 +1,9 @@
 2002-01-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
-	* faq.ht: New entry: "Is TMDA planning to support Microsoft
-	Exchange Server?"
+	* faq.ht: New entries: 
+
+	- "Is TMDA planning to support Microsoft Exchange Server?"
+	- "Can't spammers just setup an auto-responder to defeat TMDA?"
 	
 	* inuse.ht (Links): Add Paradigm-Omega, from Robin Lynn Frank.
 	
